# slop-guard

./: .gitignore  AGENTS.md  DESIGN_rhythm_analysis.md  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  cli.py  pyproject.toml  slop_guard.py  test_slop_guard.py  zensical.toml
.claude/skills/qa/: SKILL.md
.github/workflows/: ci.yml  pages.yml  publish.yml
benchmark/: chart.py  compute-time.py  fit_rules_on_us_pd_newspapers.py  generate-pure-slop-data-designer.py  us_pd_newspapers_histogram.py  us_pd_newspapers_scatter.py
docs/: agents.md  index.html  index.md  versions.json
docs/assets/: app.js  styles.css
docs/dev/: 404.html  agents.md  get-started.md  index.html  rules.md  search.json  sitemap.xml
docs/dev/agents/: index.html
docs/dev/get-started/: index.html
docs/dev/rules/: ai-disclosure.md  bold-term-bullet-run.md  copula-chain.md  em-dash-density.md  index.html  intrasentence-keyword-bold.md  paragraph-cv.md  placeholder.md  structural-pattern.md  tone-marker.md
docs/dev/rules/ai-disclosure/: index.html
docs/dev/rules/blockquote-density/: index.html
docs/dev/rules/bold-term-bullet-run/: index.html
docs/dev/rules/bullet-density/: index.html
docs/dev/rules/closing-aphorism/: index.html
docs/dev/rules/colon-density/: index.html
docs/dev/rules/contrast-pair/: index.html
docs/dev/rules/copula-chain/: index.html
docs/dev/rules/em-dash-density/: index.html
docs/dev/rules/extreme-sentence/: index.html
docs/dev/rules/horizontal-rule-overuse/: index.html
docs/dev/rules/intrasentence-keyword-bold/: index.html
docs/dev/rules/paragraph-balance/: index.html
docs/dev/rules/paragraph-cv/: index.html
docs/dev/rules/phrase-reuse/: index.html
docs/dev/rules/pithy-fragment/: index.html
docs/dev/rules/placeholder/: index.html
docs/dev/rules/rhythm/: index.html
docs/dev/rules/setup-resolution/: index.html
docs/dev/rules/slop-phrase/: index.html
docs/dev/rules/slop-word/: index.html
docs/dev/rules/structural-pattern/: index.html
docs/dev/rules/tone-marker/: index.html
docs/dev/rules/weasel-phrase/: index.html
docs/rules/: blockquote-density.md  bullet-density.md  closing-aphorism.md  colon-density.md  contrast-pair.md  extreme-sentence.md  horizontal-rule-overuse.md  index.md  paragraph-balance.md  phrase-reuse.md  pithy-fragment.md  rhythm.md  setup-resolution.md  slop-phrase.md  slop-word.md  weasel-phrase.md
docs/stylesheets/: extra.css
eval/: README.md  __init__.py  analyze.py  cli.py  harness.py  metrics.py  prompts.py
landing/: index.html
slop-guard-ext/: README.md  background.js  bundle.py  manifest.chrome.json  manifest.firefox.json  popup.html  popup.js  python_bundle.js  update.ps1  update.sh
src/slop_guard/: __init__.py  __main__.py  analysis.py  cli.py  config.py  docs_site.py  document.py  engine.py  fit_cli.py  markdown.py  models.py  scoring.py  server.py  version.py
src/slop_guard/apps/: __init__.py  cli.py  fit.py  mcp.py
src/slop_guard/rules/: __init__.py  base.py  catalog.py  fitting.py  helpers.py  ngrams.py  pipeline.py  registry.py
src/slop_guard/rules/assets/: default.jsonl
src/slop_guard/rules/paragraph/: __init__.py  blockquote_density.py  bold_term_bullet_run.py  bullet_density.py  horizontal_rule_overuse.py  structural_pattern.py
src/slop_guard/rules/paragraph_level/: __init__.py  blockquote_density_rule.py  bold_term_bullet_run_rule.py  bullet_density_rule.py  horizontal_rule_overuse_rule.py  structural_pattern_rule.py
src/slop_guard/rules/passage/: __init__.py  closing_aphorism.py  colon_density.py  copula_chain.py  em_dash_density.py  extreme_sentence.py  paragraph_rhythm.py  phrase_reuse.py  rhythm.py
src/slop_guard/rules/passage_level/: __init__.py  closing_aphorism_rule.py  colon_density_rule.py  copula_chain_rule.py  em_dash_density_rule.py  extreme_sentence_rule.py  paragraph_rhythm_rule.py  phrase_reuse_rule.py  rhythm_rule.py
src/slop_guard/rules/sentence/: __init__.py  ai_disclosure.py  contrast_pair.py  intrasentence_keyword_bold.py  pithy_fragment.py  placeholder.py  setup_resolution.py  slop_phrase.py  tone_marker.py  weasel_phrase.py
src/slop_guard/rules/sentence_level/: __init__.py  ai_disclosure_rule.py  contrast_pair_rule.py  pithy_fragment_rule.py  placeholder_rule.py  setup_resolution_rule.py  slop_phrase_rule.py  tone_marker_rule.py  weasel_phrase_rule.py
src/slop_guard/rules/word/: __init__.py  slop_word.py
src/slop_guard/rules/word_level/: __init__.py  slop_word_rule.py
tests/: conftest.py  test_advice_updates.py  test_analysis_pipeline.py  test_cli.py  test_contrast_pair_rule.py  test_docs_site.py  test_eval_analyze.py  test_eval_metrics.py  test_eval_prompts.py  test_extreme_sentence_rule.py  test_fit_cli.py  test_import_boundaries.py  test_intrasentence_keyword_bold_rule.py  test_pipeline_jsonl.py  test_rule_fit_learning.py  test_rule_framework.py  test_server_main.py  test_server_tools.py  test_setup_resolution_rule.py
tools/: __init__.py  docs_rules.py  docs_site.py
